[project]
name        = "finetune-gemma3"
version     = "0.1.0"
description = "Fine tuning de Gemma 3 sur mon laptop (voir si ca marche)"
readme      = "README.md"
authors     = [
    {name = "Xavier GILLARD",email = "xaviergillard@gmail.com"}
]
requires-python = ">=3.10,<3.11"


############################ BUILD #####################################
[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

############################ POETRY ####################################
[tool.poetry]
packages  = [{include = "finetune_gemma3", from = "src"}]

[[tool.poetry.source]]
name      = "pytorch-cuda"
url       = "https://download.pytorch.org/whl/cu128"
priority  = "supplemental"

[tool.poetry.dependencies]
## pytorch
torch        = { version = "^2.7",  source="pytorch-cuda" }
#torchaudio  = { version = "~=2.5",  source="pytorch-cuda" }
#torchvision = { version = "~=0.22", source="pytorch-cuda" }

## hugginface
datasets     = ">=3.5.1,<4.0.0"
tokenizers   = ">=0.21.1,<0.22.0"
transformers = ">=4.51.3,<5.0.0"
accelerate   = ">=1.6.0,<2.0.0"
bitsandbytes = ">=0.45.5,<0.46.0"
peft         = ">=0.15.2,<0.16.0"
trl          = ">=0.17.0,<0.18.0"

############################ RUFF ####################################
[tool.ruff]
# global built-in configuration
fix                    = false
show-fixes             = true
line-length            = 88
indent-width           = 4
exclude                = [".venv"]
# how ruff is going to format code
[tool.ruff.format]
quote-style            = "double"
indent-style           = "space"
line-ending            = "cr-lf"
docstring-code-format  = true
# what kind of lints is it going to apply
[tool.ruff.lint]
select                 = ["ALL"]
[tool.ruff.pycodestyle]
max-line-length        = 120

############################ MYPY ####################################
[tool.mypy]
ignore_missing_imports = true
check_untyped_defs     = true